--- a/imjoy-plugins/SchemaIO.imjoy.html
+++ b/imjoy-plugins/SchemaIO.imjoy.html
@@ -1,5 +1,5 @@
 ﻿<docs lang="markdown">
-# Introduce
+# Introduction
 
 Input and output schema use this plugin.
 
@@ -120,7 +120,7 @@ e.g.
     "type": "window",
     "tags": [],
     "ui": "",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "api_version": "0.1.3",
     "description": "[TODO: describe this plugin with one sentence.]",
     "icon": "extension",
@@ -158,7 +158,7 @@ e.g.
                 <br>
                 <p v-if="item.message">{{item.message}}</p>
                 <br>
-                <input type="button" class="submit-button" v-for="val in item.buttons" :value="val.value"  @click="onSubmit($event, val.callback.pluginName, val.callback.functionName, val.callback.data)">
+                <input type="button" class="submit-button" v-for="val in item.buttons" :value="val.name"  @click="onSubmit($event, val.callback.pluginName, val.callback.functionName, val.callback.data)">
             </div>
         </div>
     </div>
