--- a/imjoy-plugins/HPA-UMAP.imjoy.html
+++ b/imjoy-plugins/HPA-UMAP.imjoy.html
@@ -36,7 +36,7 @@ a localization pattern.
     "https://unpkg.com/spectre.css/dist/spectre-icons.min.css"],
   "dependencies": [],
   "defaults": {"w": 50, "h":20, "fullscreen": true},
-  "cover": "https://kth.box.com/shared/static/epguk8lkho1i5wrukf5q138k2pi4n9kd.gif"
+  "cover": "https://raw.githubusercontent.com/imjoy-team/example-plugins/master/imjoy-plugins/HPA-UMAP.gif"
 }
 </config>
 
