--- a/imjoy-plugins/SchemaIO.imjoy.html
+++ b/imjoy-plugins/SchemaIO.imjoy.html
@@ -1,4 +1,4 @@
-﻿<docs lang="markdown">
+<docs lang="markdown">
 # Introduction
 
 Input and output schema use this plugin.
@@ -86,10 +86,7 @@ e.g.
         DNA: 'GGAGGCG...',
         modelType: 'all species'
     },
-    callback: {
-        pluginName: 'WebWorkerII',
-        functionName: 'show_schema_data1'
-    },
+    callback: plugin.show_schema_data1,
     title: 'input vue schema',
     show: true,
     formOptions: {
@@ -120,7 +117,7 @@ e.g.
     "type": "window",
     "tags": [],
     "ui": "",
-    "version": "0.2.5",
+    "version": "0.2.6",
     "api_version": "0.1.3",
     "description": "[TODO: describe this plugin with one sentence.]",
     "icon": "extension",
@@ -147,7 +144,7 @@ e.g.
             <div class="panel-body">
             	<vue-form-generator :schema="item.schema" :model="item.model" :options="item.formOptions"></vue-form-generator>
                 <div class="button-container-padding">
-                    <input type="button" class="submit-button" value="Run" @click="onSubmit($event, item.callback.pluginName, item.callback.functionName, item.model)">
+                    <input type="button" class="submit-button" value="Run" @click="onSubmit($event, item.callback, item.model)">
                 </div>
             </div>
         </div>
@@ -158,7 +155,7 @@ e.g.
                 <br>
                 <p v-if="item.message">{{item.message}}</p>
                 <br>
-                <input type="button" class="submit-button" v-for="val in item.buttons" :value="val.name"  @click="onSubmit($event, val.callback.pluginName, val.callback.functionName, val.callback.data)">
+                <input type="button" class="submit-button" v-for="val in item.buttons" :value="val.name"  @click="onSubmit($event, val.callback, val.callback.data)">
             </div>
         </div>
     </div>
@@ -232,9 +229,9 @@ class ImJoyPlugin {
             	this.inputViewList.push(my.data)
             },
             methods: {
-                async onSubmit (e, pluginName, functionName, model) {
+                async onSubmit (e, callback, model) {
                     e.preventDefault()
-                    await api.call(pluginName, functionName, model)
+                    await callback(model)
                 }
             }
         })
