--- a/imjoy-plugins/DeepBindScan.imjoy.html
+++ b/imjoy-plugins/DeepBindScan.imjoy.html
@@ -19,7 +19,7 @@ the prediction will then take several minutes.
   "type": "native-python",
   "version": "0.2.11",
   "api_version": "0.1.3",
-  "description": "[TODO: describe this plugin with one sentence.]",
+  "description": "Predict binding affinity of TF/RBP to a given DNA/RNA sequence.",
   "tags": [],
   "ui": "",
   "inputs": null,
@@ -28,8 +28,7 @@ the prediction will then take several minutes.
   "icon": "extension",
   "env": "conda create -n kipoi-tf python=3.6",
   "requirements": ["conda: h5py tensorflow>=1.4 keras>=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas", "pip: kipoi kipoiseq" ],
-  "dependencies": [
-  "https://gist.githubusercontent.com/oeway/291141e1429bd71670ce15709bff8298/raw/SchemaIO.imjoy.html"]
+  "dependencies": ["imjoy-team/example-plugins:SchemaIO"]
 }
 </config>
 
