--- a/imjoy-plugins/HPA-Classification.imjoy.html
+++ b/imjoy-plugins/HPA-Classification.imjoy.html
@@ -1,10 +1,12 @@
 <docs>
 
-# ShuffleNetV2 for HPA
+This plugin allows to predict the subcellular protein localization pattern for a provided image. 
 
-https://github.com/CellProfiling/HPA-Special-Prize
-
-Class Activation Map: https://arxiv.org/pdf/1512.04150.pdf
+## Main features
+* Prediction is performed with the winner of the special price of the 2018 Kaggle challenge (https://github.com/CellProfiling/HPA-Special-Prize). 
+* Annotated localization classes are from the **HPA cell atlas**. 
+* The plugin uses a trained **ShuffleNet (v2)** to perform the prediction directly in the browser. 
+* Class Activation Map: https://arxiv.org/pdf/1512.04150.pdf  
 
 </docs>
 
