--- a/imjoy-plugins/DeepBindScan.imjoy.html
+++ b/imjoy-plugins/DeepBindScan.imjoy.html
@@ -17,7 +17,7 @@ the prediction will then take several minutes.
 {
   "name": "DeepBindScan",
   "type": "native-python",
-  "version": "0.2.11",
+  "version": "0.2.12",
   "api_version": "0.1.3",
   "description": "Predict binding affinity of TF/RBP to a given DNA/RNA sequence.",
   "tags": [],
@@ -27,7 +27,7 @@ the prediction will then take several minutes.
   "flags": [],
   "icon": "extension",
   "env": "conda create -n kipoi-tf python=3.6",
-  "requirements": ["conda: h5py tensorflow>=1.4 keras>=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas", "pip: kipoi kipoiseq" ],
+  "requirements": ["conda: h5py tensorflow=1.4 keras=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas", "pip: kipoi kipoiseq" ],
   "dependencies": ["imjoy-team/example-plugins:SchemaIO"]
 }
 </config>
