--- a/imjoy-plugins/DeepBindScan.imjoy.html
+++ b/imjoy-plugins/DeepBindScan.imjoy.html
@@ -17,7 +17,7 @@ the prediction will then take several minutes.
 {
   "name": "DeepBindScan",
   "type": "native-python",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "api_version": "0.1.3",
   "description": "Predict binding affinity of TF/RBP to a given DNA/RNA sequence.",
   "tags": [],
@@ -26,9 +26,10 @@ the prediction will then take several minutes.
   "outputs": null,
   "flags": [],
   "icon": "extension",
-  "env": "conda create -n kipoi-tf python=3.6",
-  "requirements": ["conda: h5py tensorflow=1.4 conda-forge::keras=2.0.6 bioconda::pybedtools bioconda::pyfaidx numpy pandas", "pip: kipoi kipoiseq" ],
-  "dependencies": ["imjoy-team/example-plugins:SchemaIO"]
+  "env": "conda create -n deepbindscan python=3.6.8",
+  "requirements": ["conda: h5py bioconda::pybedtools bioconda::pyfaidx numpy pandas", "pip: -U tensorflow==1.8.0 keras==2.1.6 kipoi kipoiseq"],
+  "dependencies": ["imjoy-team/example-plugins:SchemaIO"],
+  "cmd": "KERAS_BACKEND=tensorflow python"
 }
 </config>
 
