--- a/imjoy-plugins/PyImageJ-Demo.imjoy.html
+++ b/imjoy-plugins/PyImageJ-Demo.imjoy.html
@@ -25,7 +25,7 @@ A PyImageJ demo ported from https://github.com/imagej/pyimagej
 </config>
 
 <script lang="python">
-from imjoy
+from imjoy import api
 import imagej
 import numpy as np
 import skimage
