HPA-UMAP: updated images in documentation

--- a/imjoy-plugins/HPA-UMAP.imjoy.html
+++ b/imjoy-plugins/HPA-UMAP.imjoy.html
@@ -1,4 +1,4 @@
-<docs lang="markdown">
+﻿<docs lang="markdown">
 
 
 This plugin allows to visualize results of a classification of protein 
@@ -21,7 +21,7 @@ a localization pattern.
   "type": "window",
   "tags": [],
   "ui": "Explore protein localization patterns in HPA images.",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "api_version": "0.1.2",
   "description": "Explore protein localization patterns in HPA images.",
   "icon": "photo",
@@ -36,7 +36,7 @@ a localization pattern.
     "https://unpkg.com/spectre.css/dist/spectre-icons.min.css"],
   "dependencies": [],
   "defaults": {"w": 50, "h":20, "fullscreen": true},
-  "cover": "https://kth.box.com/shared/static/epguk8lkho1i5wrukf5q138k2pi4n9kd.gif"
+  "cover": "https://imjoy-team.github.io/example-plugins/hpa-umap/hpa-umap-cover.gif"
 }
 </config>
 
